Added GUI